[gd_scene load_steps=22 format=2]

[ext_resource path="res://enemies/Enemy_Professor.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/Enemy_Crow.tscn" type="PackedScene" id=2]
[ext_resource path="res://tilesets/gasslands.tres" type="TileSet" id=3]
[ext_resource path="res://tilesets/details.tres" type="TileSet" id=4]
[ext_resource path="res://scenes/Game/Base.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Game/TowerManager.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/Game/GameCamera.tscn" type="PackedScene" id=7]
[ext_resource path="res://scripts/EnemySpawner.gd" type="Script" id=8]
[ext_resource path="res://enemies/Enemy_Skeleton.tscn" type="PackedScene" id=9]
[ext_resource path="res://enemies/Emeny_Gorilla.tscn" type="PackedScene" id=10]
[ext_resource path="res://enemies/Enemy_Bandit.tscn" type="PackedScene" id=11]
[ext_resource path="res://enemies/Enemy_Goblin.tscn" type="PackedScene" id=12]
[ext_resource path="res://enemies/Enemy_GrimReaper.tscn" type="PackedScene" id=13]
[ext_resource path="res://enemies/Enemy_Wolf.tscn" type="PackedScene" id=14]
[ext_resource path="res://scripts/FlowField.gd" type="Script" id=15]
[ext_resource path="res://sounds/music/mainTheme.wav" type="AudioStream" id=16]
[ext_resource path="res://scenes/Game/GameInterface.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/WaveManager.gd" type="Script" id=18]
[ext_resource path="res://scenes/Game/Level.gd" type="Script" id=19]
[ext_resource path="res://images/evil_base.png" type="Texture" id=20]

[sub_resource type="Curve" id=1]
max_value = 100.0
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 100 ), 0.0, 0.0, 0, 0 ]

[node name="World" type="Node2D"]
script = ExtResource( 19 )

[node name="GUI" type="CanvasLayer" parent="."]

[node name="GameInterface" parent="GUI" instance=ExtResource( 17 )]
margin_left = 0.0
margin_top = 0.0
margin_right = -0.00012207
margin_bottom = -0.00012207

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 3 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 128, 0, 0, 128, 0, 0 )
format = 1
tile_data = PoolIntArray( -196605, 0, 2, -196604, 0, 3, -196603, 0, 4, -196602, 0, 3, -196601, 0, 5, -131069, 0, 65538, -131068, 0, 131072, -131067, 0, 196611, -131066, 0, 131073, -131065, 0, 65541, -65533, 0, 131074, -65532, 0, 131077, -65531, 1, 262144, -65530, 0, 65538, -65529, 0, 131077, 0, 0, 2, 1, 0, 5, 2, 1, 262144, 3, 0, 131074, 4, 0, 131077, 5, 1, 262144, 6, 0, 131074, 7, 0, 196608, 8, 0, 3, 9, 0, 3, 10, 0, 3, 11, 0, 4, 12, 0, 4, 13, 0, 3, 14, 0, 4, 15, 0, 4, 16, 0, 4, 17, 0, 3, 18, 0, 3, 19, 0, 3, 20, 0, 3, 21, 0, 3, 22, 0, 4, 23, 0, 4, 24, 0, 3, 25, 0, 3, 26, 0, 5, 65536, 0, 131074, 65537, 0, 196608, 65538, 0, 3, 65539, 0, 196609, 65540, 0, 131077, 65541, 1, 262144, 65542, 0, 196610, 65543, 0, 196612, 65544, 0, 131073, 65545, 0, 65540, 65546, 0, 65540, 65547, 0, 131072, 65548, 0, 196611, 65549, 0, 196611, 65550, 0, 196611, 65551, 0, 196611, 65552, 0, 196612, 65553, 0, 196612, 65554, 0, 196611, 65555, 0, 196611, 65556, 0, 131073, 65557, 0, 131072, 65558, 0, 196611, 65559, 0, 196612, 65560, 0, 196612, 65561, 0, 131073, 65562, 0, 131077, 131072, 0, 65538, 131073, 0, 131072, 131074, 0, 196611, 131075, 0, 131073, 131076, 0, 65541, 131077, 1, 2, 131078, 1, 3, 131079, 1, 4, 131080, 0, 65538, 131081, 0, 65539, 131082, 0, 65540, 131083, 0, 65541, 131084, 1, 262144, 131085, 1, 2, 131086, 1, 3, 131087, 1, 3, 131088, 1, 3, 131089, 1, 3, 131090, 1, 3, 131091, 1, 4, 131092, 0, 196610, 131093, 0, 196613, 131094, 1, 2, 131095, 1, 4, 131096, 1, 262144, 131097, 0, 65538, 131098, 0, 65541, 196608, 0, 65538, 196609, 0, 131077, 196610, 1, 262144, 196611, 0, 196610, 196612, 0, 196613, 196613, 1, 65538, 196614, 1, 262145, 196615, 1, 65540, 196616, 0, 131074, 196617, 0, 65540, 196618, 0, 65540, 196619, 0, 196608, 196620, 0, 5, 196621, 1, 131074, 196622, 1, 131073, 196623, 1, 262144, 196624, 1, 65539, 196625, 1, 65539, 196626, 1, 262145, 196627, 1, 196608, 196628, 1, 3, 196629, 1, 3, 196630, 1, 196609, 196631, 1, 65540, 196632, 0, 2, 196633, 0, 196609, 196634, 0, 65541, 262144, 0, 65538, 262145, 0, 65541, 262146, 1, 2, 262147, 1, 3, 262148, 1, 3, 262149, 1, 196609, 262150, 1, 262144, 262151, 1, 65540, 262152, 0, 196610, 262153, 0, 131073, 262154, 0, 65540, 262155, 0, 131076, 262156, 0, 196608, 262157, 0, 5, 262158, 1, 65538, 262159, 1, 65539, 262160, 1, 262145, 262161, 1, 65539, 262162, 1, 65539, 262163, 1, 65539, 262164, 1, 262144, 262165, 1, 65539, 262166, 1, 65539, 262167, 1, 65540, 262168, 0, 131074, 262169, 0, 65540, 262170, 0, 65541, 327680, 0, 131074, 327681, 0, 131077, 327682, 1, 131074, 327683, 1, 131073, 327684, 1, 262144, 327685, 1, 262145, 327686, 1, 262144, 327687, 1, 196608, 327688, 1, 4, 327689, 0, 65538, 327690, 0, 65540, 327691, 0, 65540, 327692, 0, 131072, 327693, 0, 196613, 327694, 1, 65538, 327695, 1, 262144, 327696, 1, 262144, 327697, 1, 65539, 327698, 1, 262144, 327699, 1, 262144, 327700, 1, 262145, 327701, 1, 262145, 327702, 1, 65539, 327703, 1, 65540, 327704, 0, 65538, 327705, 0, 65540, 327706, 0, 65541, 393216, 0, 65538, 393217, 0, 196608, 393218, 0, 5, 393219, 1, 65538, 393220, 1, 65539, 393221, 1, 262144, 393222, 1, 65539, 393223, 1, 262145, 393224, 1, 65540, 393225, 0, 65538, 393226, 0, 65540, 393227, 0, 65540, 393228, 0, 65541, 393229, 1, 2, 393230, 1, 196609, 393231, 1, 262145, 393232, 1, 131072, 393233, 1, 131075, 393234, 1, 131075, 393235, 1, 131073, 393236, 1, 262144, 393237, 1, 262145, 393238, 1, 65539, 393239, 1, 65540, 393240, 0, 196610, 393241, 0, 131073, 393242, 0, 65541, 458752, 0, 131074, 458753, 0, 131076, 458754, 0, 65541, 458755, 1, 65538, 458756, 1, 65539, 458757, 1, 262144, 458758, 1, 262145, 458759, 1, 262144, 458760, 1, 65540, 458761, 0, 131074, 458762, 0, 65540, 458763, 0, 65540, 458764, 0, 65541, 458765, 1, 65538, 458766, 1, 262145, 458767, 1, 131072, 458768, 1, 131076, 458769, 0, 2, 458770, 0, 5, 458771, 1, 65538, 458772, 1, 262145, 458773, 1, 262145, 458774, 1, 65539, 458775, 1, 196608, 458776, 1, 4, 458777, 0, 65538, 458778, 0, 131077, 458784, 4, 0, 524288, 0, 65538, 524289, 0, 65540, 524290, 0, 65541, 524291, 1, 65538, 524292, 1, 65539, 524293, 1, 262145, 524294, 1, 262145, 524295, 1, 65539, 524296, 1, 65540, 524297, 0, 131074, 524298, 0, 65540, 524299, 0, 65540, 524300, 0, 65541, 524301, 1, 65538, 524302, 1, 65539, 524303, 1, 65540, 524304, 0, 2, 524305, 0, 196609, 524306, 0, 131077, 524307, 1, 65538, 524308, 1, 65539, 524309, 1, 65539, 524310, 1, 262145, 524311, 1, 262144, 524312, 1, 65540, 524313, 0, 65538, 524314, 0, 65541, 524316, 2, 0, 524317, 3, 0, 524318, 3, 0, 524319, 5, 0, 524320, 4, 0, 589824, 0, 65538, 589825, 0, 65540, 589826, 0, 131077, 589827, 1, 131074, 589828, 1, 131073, 589829, 1, 262144, 589830, 1, 65539, 589831, 1, 262144, 589832, 1, 65540, 589833, 0, 196610, 589834, 0, 196611, 589835, 0, 196612, 589836, 0, 196613, 589837, 1, 65538, 589838, 1, 262144, 589839, 1, 65540, 589840, 0, 196610, 589841, 0, 196612, 589842, 0, 196613, 589843, 1, 65538, 589844, 1, 65539, 589845, 1, 262145, 589846, 1, 262145, 589847, 1, 65539, 589848, 1, 65540, 589849, 0, 65538, 589850, 0, 65541, 589852, 4, 0, 589853, 5, 0, 589854, 5, 0, 589855, 5, 0, 655360, 0, 131074, 655361, 0, 65540, 655362, 0, 196608, 655363, 0, 5, 655364, 1, 131074, 655365, 1, 131073, 655366, 1, 131072, 655367, 1, 131075, 655368, 1, 131076, 655369, 1, 262144, 655370, 1, 262144, 655371, 1, 2, 655372, 1, 3, 655373, 1, 196609, 655374, 1, 65539, 655375, 1, 196608, 655376, 1, 3, 655377, 1, 3, 655378, 1, 3, 655379, 1, 196609, 655380, 1, 65539, 655381, 1, 262145, 655382, 1, 65539, 655383, 1, 262145, 655384, 1, 65540, 655385, 0, 131074, 655386, 0, 65541, 655388, 4, 0, 655389, 5, 0, 655390, 5, 0, 655391, 4, 0, 720896, 0, 131074, 720897, 0, 131076, 720898, 0, 65540, 720899, 0, 196608, 720900, 0, 5, 720901, 1, 65538, 720902, 1, 65540, 720903, 0, 2, 720904, 0, 4, 720905, 0, 3, 720906, 0, 5, 720907, 1, 65538, 720908, 1, 262145, 720909, 1, 262145, 720910, 1, 65539, 720911, 1, 65539, 720912, 1, 65539, 720913, 1, 262144, 720914, 1, 262145, 720915, 1, 262144, 720916, 1, 262145, 720917, 1, 262145, 720918, 1, 262145, 720919, 1, 262145, 720920, 1, 65540, 720921, 0, 131074, 720922, 0, 65541, 720925, 5, 0, 720926, 5, 0, 720927, 4, 0, 786432, 0, 65538, 786433, 0, 65540, 786434, 0, 65540, 786435, 0, 131076, 786436, 0, 65541, 786437, 1, 65538, 786438, 1, 65540, 786439, 0, 196610, 786440, 0, 196612, 786441, 0, 131073, 786442, 0, 131077, 786443, 1, 131074, 786444, 1, 131075, 786445, 1, 131073, 786446, 1, 131072, 786447, 1, 131075, 786448, 1, 131075, 786449, 1, 131073, 786450, 1, 262145, 786451, 1, 262144, 786452, 1, 65539, 786453, 1, 65539, 786454, 1, 262144, 786455, 1, 65539, 786456, 1, 65540, 786457, 0, 131074, 786458, 0, 131077, 786461, 5, 0, 786462, 5, 0, 786463, 4, 0, 851968, 0, 131074, 851969, 0, 65540, 851970, 0, 65540, 851971, 0, 65540, 851972, 0, 131077, 851973, 1, 131074, 851974, 1, 262144, 851975, 1, 3, 851976, 1, 4, 851977, 0, 131074, 851978, 0, 196608, 851979, 0, 4, 851980, 0, 5, 851981, 1, 65538, 851982, 1, 65540, 851983, 0, 2, 851984, 0, 5, 851985, 1, 131074, 851986, 1, 131075, 851987, 1, 131073, 851988, 1, 262145, 851989, 1, 262145, 851990, 1, 262145, 851991, 1, 65539, 851992, 1, 65540, 851993, 0, 65538, 851994, 0, 131077, 851997, 5, 0, 851998, 5, 0, 851999, 4, 0, 917504, 0, 131074, 917505, 0, 65540, 917506, 0, 65540, 917507, 0, 65540, 917508, 0, 196608, 917509, 0, 5, 917510, 1, 131074, 917511, 1, 131073, 917512, 1, 65540, 917513, 0, 65538, 917514, 0, 131072, 917515, 0, 196611, 917516, 0, 196613, 917517, 1, 65538, 917518, 1, 65540, 917519, 0, 65538, 917520, 0, 196608, 917521, 0, 4, 917522, 0, 5, 917523, 1, 65538, 917524, 1, 65539, 917525, 1, 262145, 917526, 1, 65539, 917527, 1, 131072, 917528, 1, 131076, 917529, 0, 65538, 917530, 0, 131077, 917533, 5, 0, 917534, 5, 0, 917535, 4, 0, 983040, 0, 131074, 983041, 0, 65539, 983042, 0, 65540, 983043, 0, 65540, 983044, 0, 65540, 983045, 0, 196608, 983046, 0, 5, 983047, 1, 65538, 983048, 1, 65540, 983049, 0, 196610, 983050, 0, 196613, 983051, 1, 2, 983052, 1, 3, 983053, 1, 196609, 983054, 1, 65540, 983055, 0, 196610, 983056, 0, 196611, 983057, 0, 131073, 983058, 0, 131077, 983059, 1, 65538, 983060, 1, 65539, 983061, 1, 262144, 983062, 1, 131072, 983063, 1, 131076, 983064, 0, 2, 983065, 0, 196609, 983066, 0, 131077, 1048576, 0, 65538, 1048577, 0, 65540, 1048578, 0, 65540, 1048579, 0, 131075, 1048580, 0, 65540, 1048581, 0, 65540, 1048582, 0, 65541, 1048583, 1, 65538, 1048584, 1, 196608, 1048585, 1, 3, 1048586, 1, 3, 1048587, 1, 196609, 1048588, 1, 65539, 1048589, 1, 262144, 1048590, 1, 196608, 1048591, 1, 3, 1048592, 1, 4, 1048593, 0, 196610, 1048594, 0, 196613, 1048595, 1, 65538, 1048596, 1, 65539, 1048597, 1, 131072, 1048598, 1, 131076, 1048599, 0, 2, 1048600, 0, 196609, 1048601, 0, 65540, 1048602, 0, 131077, 1114112, 0, 131074, 1114113, 0, 65540, 1114114, 0, 65540, 1114115, 0, 65540, 1114116, 0, 131072, 1114117, 0, 196612, 1114118, 0, 196613, 1114119, 1, 65538, 1114120, 1, 262144, 1114121, 1, 65539, 1114122, 1, 262144, 1114123, 1, 262144, 1114124, 1, 262144, 1114125, 1, 65539, 1114126, 1, 262144, 1114127, 1, 262144, 1114128, 1, 196608, 1114129, 1, 3, 1114130, 1, 3, 1114131, 1, 196609, 1114132, 1, 65539, 1114133, 1, 65540, 1114134, 0, 2, 1114135, 0, 196609, 1114136, 0, 65540, 1114137, 0, 65540, 1114138, 0, 131077, 1179648, 0, 65538, 1179649, 0, 65540, 1179650, 0, 65540, 1179651, 0, 65540, 1179652, 0, 131077, 1179653, 1, 2, 1179654, 1, 3, 1179655, 1, 196609, 1179656, 1, 262144, 1179657, 1, 65539, 1179658, 1, 262145, 1179659, 1, 262145, 1179660, 1, 65539, 1179661, 1, 65539, 1179662, 1, 262145, 1179663, 1, 65539, 1179664, 1, 65539, 1179665, 1, 262144, 1179666, 1, 65539, 1179667, 1, 262145, 1179668, 1, 262144, 1179669, 1, 65540, 1179670, 0, 131074, 1179671, 0, 131072, 1179672, 0, 196612, 1179673, 0, 131073, 1179674, 0, 131077, 1245184, 0, 65538, 1245185, 0, 65540, 1245186, 0, 65540, 1245187, 0, 65540, 1245188, 0, 65541, 1245189, 1, 65538, 1245190, 1, 65539, 1245191, 1, 262145, 1245192, 1, 262144, 1245193, 1, 65539, 1245194, 1, 262144, 1245195, 1, 131072, 1245196, 1, 131075, 1245197, 1, 131075, 1245198, 1, 131075, 1245199, 1, 131075, 1245200, 1, 131073, 1245201, 1, 65539, 1245202, 1, 262144, 1245203, 1, 262145, 1245204, 1, 65539, 1245205, 1, 65540, 1245206, 0, 196610, 1245207, 0, 196613, 1245208, 1, 262144, 1245209, 0, 65538, 1245210, 0, 65541, 1310720, 0, 131074, 1310721, 0, 65540, 1310722, 0, 65540, 1310723, 0, 131076, 1310724, 0, 65541, 1310725, 1, 65538, 1310726, 1, 65539, 1310727, 1, 262145, 1310728, 1, 262145, 1310729, 1, 262145, 1310730, 1, 262144, 1310731, 1, 65540, 1310732, 0, 2, 1310733, 0, 4, 1310734, 0, 3, 1310735, 0, 5, 1310736, 1, 131074, 1310737, 1, 131075, 1310738, 1, 131073, 1310739, 1, 65539, 1310740, 1, 262145, 1310741, 1, 196608, 1310742, 1, 3, 1310743, 1, 3, 1310744, 1, 4, 1310745, 0, 65538, 1310746, 0, 65541, 1376256, 0, 131074, 1376257, 0, 65540, 1376258, 0, 65540, 1376259, 0, 131076, 1376260, 0, 131077, 1376261, 1, 65538, 1376262, 1, 262144, 1376263, 1, 65539, 1376264, 1, 262145, 1376265, 1, 65539, 1376266, 1, 262145, 1376267, 1, 65540, 1376268, 0, 196610, 1376269, 0, 196612, 1376270, 0, 131073, 1376271, 0, 196608, 1376272, 0, 3, 1376273, 0, 5, 1376274, 1, 65538, 1376275, 1, 262145, 1376276, 1, 65539, 1376277, 1, 65539, 1376278, 1, 65539, 1376279, 1, 65539, 1376280, 1, 65540, 1376281, 0, 65538, 1376282, 0, 131077, 1441792, 0, 131074, 1441793, 0, 131072, 1441794, 0, 196612, 1441795, 0, 196611, 1441796, 0, 196613, 1441797, 1, 65538, 1441798, 1, 262145, 1441799, 1, 65539, 1441800, 1, 262145, 1441801, 1, 262144, 1441802, 1, 262144, 1441803, 1, 196608, 1441804, 1, 3, 1441805, 1, 4, 1441806, 0, 196610, 1441807, 0, 196611, 1441808, 0, 196612, 1441809, 0, 196613, 1441810, 1, 65538, 1441811, 1, 262145, 1441812, 1, 262144, 1441813, 1, 262144, 1441814, 1, 262145, 1441815, 1, 262145, 1441816, 1, 65540, 1441817, 0, 131074, 1441818, 0, 131077, 1507328, 0, 65538, 1507329, 0, 131077, 1507330, 1, 2, 1507331, 1, 3, 1507332, 1, 3, 1507333, 1, 196609, 1507334, 1, 262144, 1507335, 1, 262144, 1507336, 1, 262144, 1507337, 1, 65539, 1507338, 1, 262144, 1507339, 1, 65539, 1507340, 1, 262145, 1507341, 1, 196608, 1507342, 1, 3, 1507343, 1, 3, 1507344, 1, 3, 1507345, 1, 3, 1507346, 1, 196609, 1507347, 1, 131072, 1507348, 1, 131075, 1507349, 1, 131075, 1507350, 1, 131073, 1507351, 1, 65539, 1507352, 1, 65540, 1507353, 0, 131074, 1507354, 0, 131077, 1572864, 0, 131074, 1572865, 0, 65541, 1572866, 1, 65538, 1572867, 1, 262144, 1572868, 1, 262144, 1572869, 1, 262144, 1572870, 1, 262145, 1572871, 1, 262144, 1572872, 1, 262145, 1572873, 1, 65539, 1572874, 1, 262144, 1572875, 1, 65539, 1572876, 1, 262145, 1572877, 1, 262144, 1572878, 1, 262144, 1572879, 1, 262144, 1572880, 1, 262145, 1572881, 1, 262145, 1572882, 1, 65539, 1572883, 1, 65540, 1572884, 0, 2, 1572885, 0, 5, 1572886, 1, 65538, 1572887, 1, 262144, 1572888, 1, 65540, 1572889, 0, 65538, 1572890, 0, 65541, 1638400, 0, 131074, 1638401, 0, 131077, 1638402, 1, 131074, 1638403, 1, 131075, 1638404, 1, 131075, 1638405, 1, 131075, 1638406, 1, 131075, 1638407, 1, 131075, 1638408, 1, 131075, 1638409, 1, 131075, 1638410, 1, 131073, 1638411, 1, 262144, 1638412, 1, 262145, 1638413, 1, 131072, 1638414, 1, 131075, 1638415, 1, 131075, 1638416, 1, 131073, 1638417, 1, 65539, 1638418, 1, 131072, 1638419, 1, 131076, 1638420, 0, 65538, 1638421, 0, 65541, 1638422, 1, 65538, 1638423, 1, 262145, 1638424, 1, 65540, 1638425, 0, 65538, 1638426, 0, 131077, 1703936, 0, 65538, 1703937, 0, 131077, 1703938, 1, 262144, 1703939, 0, 2, 1703940, 0, 4, 1703941, 0, 3, 1703942, 0, 4, 1703943, 0, 3, 1703944, 0, 3, 1703945, 0, 5, 1703946, 1, 131074, 1703947, 1, 131075, 1703948, 1, 131075, 1703949, 1, 131076, 1703950, 0, 2, 1703951, 0, 5, 1703952, 1, 131074, 1703953, 1, 131075, 1703954, 1, 131076, 1703955, 0, 2, 1703956, 0, 196609, 1703957, 0, 65541, 1703958, 1, 131074, 1703959, 1, 131075, 1703960, 1, 131076, 1703961, 0, 65538, 1703962, 0, 131077, 1769472, 0, 65538, 1769473, 0, 131077, 1769474, 1, 262144, 1769475, 0, 65538, 1769476, 0, 65540, 1769477, 0, 65540, 1769478, 0, 65540, 1769479, 0, 65540, 1769480, 0, 65540, 1769481, 0, 196608, 1769482, 0, 3, 1769483, 0, 3, 1769484, 0, 3, 1769485, 0, 3, 1769486, 0, 196609, 1769487, 0, 196608, 1769488, 0, 3, 1769489, 0, 4, 1769490, 0, 4, 1769491, 0, 196609, 1769492, 0, 65540, 1769493, 0, 196608, 1769494, 0, 3, 1769495, 0, 3, 1769496, 0, 4, 1769497, 0, 196609, 1769498, 0, 131077, 1835008, 0, 65538, 1835009, 0, 65541, 1835010, 1, 262144, 1835011, 0, 65538, 1835012, 0, 131072, 1835013, 0, 196611, 1835014, 0, 196611, 1835015, 0, 196612, 1835016, 0, 196612, 1835017, 0, 196612, 1835018, 0, 196611, 1835019, 0, 196612, 1835020, 0, 196612, 1835021, 0, 196611, 1835022, 0, 196612, 1835023, 0, 196612, 1835024, 0, 196612, 1835025, 0, 196612, 1835026, 0, 196612, 1835027, 0, 196611, 1835028, 0, 196612, 1835029, 0, 196611, 1835030, 0, 196611, 1835031, 0, 196611, 1835032, 0, 196612, 1835033, 0, 196611, 1835034, 0, 196613, 1900544, 0, 131074, 1900545, 0, 131077, 1900546, 1, 262144, 1900547, 0, 131074, 1900548, 0, 65541, 1966080, 0, 65538, 1966081, 0, 196608, 1966082, 0, 4, 1966083, 0, 196609, 1966084, 0, 131077, 2031616, 0, 196610, 2031617, 0, 196611, 2031618, 0, 196612, 2031619, 0, 196611, 2031620, 0, 196613 )

[node name="Details" type="TileMap" parent="."]
position = Vector2( -1.33325, 0 )
tile_set = ExtResource( 4 )
cell_size = Vector2( 128, 128 )
cell_custom_transform = Transform2D( 0, 0, 0, 0, 0, 0 )
format = 1
tile_data = PoolIntArray( 2, 0, 1, 131084, 0, 2, 131087, 0, 2, 131096, 0, 2, 196621, 0, 1, 196622, 0, 0, 327682, 0, 1, 393239, 0, 1, 458776, 0, 0, 524291, 0, 2, 524296, 0, 1, 524301, 0, 1, 655376, 0, 1, 655378, 0, 0, 786443, 0, 0, 917512, 0, 1, 917518, 0, 0, 983059, 0, 0, 983063, 0, 2, 1048583, 0, 0, 1048591, 0, 1, 1245196, 0, 1, 1245205, 0, 1, 1245206, 0, 2, 1245208, 0, 2, 1310725, 0, 1, 1310731, 0, 1, 1310736, 0, 2, 1310744, 0, 0, 1507330, 0, 2, 1507345, 0, 2, 1507352, 0, 2, 1638407, 0, 1, 1638411, 0, 0, 1703946, 0, 2, 1703948, 0, 2 )
__meta__ = {
"_editor_description_": ""
}

[node name="GameCamera" parent="." instance=ExtResource( 7 )]
position = Vector2( -7.55127, 0 )

[node name="WaveManager" type="Node" parent="."]
script = ExtResource( 18 )
difficulty = SubResource( 1 )

[node name="Spawners" type="Node" parent="WaveManager"]

[node name="EnemySpawner" type="Node2D" parent="WaveManager/Spawners"]
script = ExtResource( 8 )
enemies = [ ExtResource( 1 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 9 ), ExtResource( 14 ) ]

[node name="Location" type="Node2D" parent="WaveManager/Spawners/EnemySpawner"]
position = Vector2( 700.228, 69.8059 )
scale = Vector2( -351.152, 29.6999 )
__meta__ = {
"_editor_description_": ""
}

[node name="Sprite" type="Sprite" parent="WaveManager/Spawners/EnemySpawner/Location"]
rotation = 3.14159
scale = Vector2( 0.012, -0.128 )
texture = ExtResource( 20 )

[node name="Target" type="Node2D" parent="WaveManager/Spawners/EnemySpawner"]
position = Vector2( 321.06, 3668.72 )

[node name="Timer" type="Timer" parent="WaveManager/Spawners/EnemySpawner"]

[node name="Base" parent="." instance=ExtResource( 5 )]

[node name="TowerManager" parent="." instance=ExtResource( 6 )]

[node name="FlowField" type="Node" parent="."]
script = ExtResource( 15 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 16 )
volume_db = -40.0
autoplay = true

[connection signal="timeout" from="WaveManager/Spawners/EnemySpawner/Timer" to="WaveManager/Spawners/EnemySpawner" method="_on_timer"]
